task-manager-back/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-back-service
spec:
  type: NodePort
  selector:
    app: task-manager-back
  ports:
    - port: 3000
      targetPort: 3000
